app/styles/app.less
/* ... */
.md-button.md-accent.md-raised:hover {
  background-color: rgb(255, 64, 129) !important;
  box-shadow: 2px 2px 2px #2d355f;
}

a {
  font-size: 18px;
  text-decoration: none;
  cursor: pointer;
}

a:hover {
  box-shadow: 5px white;
  text-decoration: none;
}

body {
  width: 100%;
  height: 100%;
}

@keyframes animatedBackground {
  from {
    background-position: 0 0;
  }
  to {
    background-position: 100% 0;
  }
}

h1,
h2,
h3,
h4,
h5 {
  margin: 0 0 5px 0;
  &.md-padding {
    margin: 0;
  }
}

@keyframes jux {
  from {
    color: black;
  }
  to {
    color: black;
  }
}

h1.md-button.md-raised.md-primary {
  margin-top: 10px;
  margin-bottom: 16px;
  font-size: 30px;
  width: auto;
  height: 30px;
  border-radius: 10px;
}

.logo-text {
  font-family: Playball;
  font-size: 30px;
  cursor: pointer;
}

.logo-text:hover {
  box-shadow: 5px grey;
}

h2 > a,
div > h4 {
  font-size: 20px;
  text-align: center;
}

.jumbo-text {
  font-size: 1.5em;
  padding: 0px;
  color: white;
}

div > h4,
div > md-button {
  margin: 0 auto;
  padding-bottom: 10px;
}

.footer {
  width: 100%;
  text-align: center;
  font-size: 0.8em;
  background-color: rgb(250, 250, 250);
  color: black;
  width: 100%;
  height: 60px;
  position: relative;
}

input {
  border: 0;
}

.messages {
  font-size: 12px;
  >div {
    margin-top: 5px;
  }
}

.sign-up-wrap {
  color: black;
  margin: 0 auto;
  width: 350px;
  background-color: #fff;
  color: black;
  padding-top: 15px;
  position: relative;
  h5 {
    a {
      font-size: 12px;
    }
  }
  form {
    width: 90%;
  }
  md-input-container {
    margin: 10px 0;
    .md-input {}
  }
  .fa {
    color: #2d355f !important;
    margin-right: 5px;
  }
}

.signup-button {
  text-align: center;
  margin: 0 auto;
}

.error {
  color: red;
  font-size: 9px;
  display: inline-flex;
}

.sign-in-wrap {
  background-color: white;
  opacity: 0.5%;
  min-width: 300px;
  color: black;
  padding-top: 10px;
  margin: 0 auto;
  padding-bottom: 15px;
  width: 320px;
  font-size: 1.2em;
  position: relative;
  h5 {
    a {
      font-size: 12px;
    }
    color: black;
  }
  md-input-container {
    margin: 10px 0;
    .md-input {}
  }
  .sign-in-footer {
    padding-bottom: 14px;
    padding-top: -3px;
    margin: -15px;
    text-align: center;
  }
  .fa {
    color: #2d355f !important;
  }
}

.signin-icons {
  float: left;
  color: #2d355f !important;
  padding-right: 10px;
}

.sign-up-link {
  color: #3f51b5 !important;
}

.layout-align-center-center>*,
.layout-align-end-center>*,
.layout-align-space-around-center>*,
.layout-align-space-between-center>*,
.layout-align-start-center>* {
  max-width: 100%;
  box-sizing: border-box;
}

md-dialog {
  margin-top: 20px;
  border-radius: 0;
  background-color: #D7D9E0;
}

.sign-up-header {
  color: #3f51b5;
  font-size: 20px;
  text-align: center;
}

p.link {
  color: red;
  font-size: 1.0em;
}

div > md-button {
  text-align: center;
}

.header-display {
  text-align: center;
  color: grey;
  font-weight: bold;
}

.dashboard-wrapper {
  width: 100%;
  height: 670px;
  padding-top: 3px;
  position: relative;
  margin: 0 auto;
  background-color: white;
  color: white;
  text-decoration-color: white;
  >mdSidenav > div > md-card {
    height: 80px;
    min-height: 80px;
  }
}

.dashboard-header {
  width: 99%;
  height: 50px;
  margin: 0 auto;
  overflow: hidden;
  border: red solid 2px;
  position: absolute;
  background-color: whitesmoke;
}

.side-bar {
  width: 200px;
  height: 640px;
  margin-top: 25px;
  position: absolute;
  float: left;
  border: dashed 3px green;
  color: red;
}

.inner-view {
  width: 99.5%;
  height: 640px;
  margin-top: 25px;
  margin-left: 200px;
  position: absolute;
  overflow: hidden;
  float: right;
  border: solid 2px red;
}

.roles {
  md-input-container {
    margin: 0;
  }
}

.dash {
  min-width: 440px;
}

.admin-search-bar {
  position: relative;
  font-size: 14px;
  margin-bottom: 10px;
  margin-right: 30px;
  width: 250px;
  > input {
    border: 0;
    border-radius: 23px;
    outline: blue;
    border-color: blue;
    background: white;
    text-align: center;
    width: 300px;
  }
}

.preview-header {
  color: rgb(232, 58, 144);
  font-weight: bolder;
  font-size: 15px;
  padding-top: 10px;
  text-align: center;
}

.text-center {
  text-align: center;
}

md-sidenav,
md-sidenav.md-locked-open,
md-sidenav.md-closed.md-locked-open-add-active {
  width: 240px !important;
  min-width: 240px !important;
  max-width: 180px !important;
  min-height: 100vh;
  font-size: 1.2em;
  position: relative;
  background-color: #fafafa;
}

md-toolbar~md-content>md-list {
  font-size: 1.2em;
  background-color: rgb(250, 250, 250) !important;
}

.sidebar-widgits {
  text-align: left;
  font-size: 1.0em;
  md-list-item {
    h4 {
      font-size: 0.8em;
      margin-left: 7px;
      margin-top: 15px;
    }
  }
  .fa {
    font-size: 0.8em;
    margin-top: 5px;
    color: #2d355f !important;
  }
}

md-toolbar.md-default-theme:not(.md-menu-toolbar),
md-toolbar:not(.md-menu-toolbar) {
  background-color: rgb(45, 53, 95) !important;
}

md-sidenav .ripple-container {
  position: relative;
  background: rgb(45, 53, 95);
  color: white;
  postion: absolute;
}

.create-document-btn {
  position: fixed;
  right: 0;
  color: white;
  margin-top: 38%;
}

.fit,
.fit-margin {
  margin: -5px
}

.fit,
.fit-padding {
  padding: 0;
}

.docForm {
  background-color: whitesmoke;
  text-align: left;
  margin: 0 auto;
  > container.md-default-theme .md-input,
  md-input-container .md-input {
    color: black !important;
  }
  .adjust-text-area {
    margin-top: -25px;
  }
  h4 {
    color: grey;
    padding-top: 10px;
    font-size: 1.3em;
  }
}

.editForm {
  border: 3px solid ghostwhite;
  text-align: center;
  border-radius: 10px;
  z-index: 20px;
  min-width: 450px;
  .fa {
    color: #2d355f !important;
    margin-right: 5px;
  }
  .md-button {
    span {
      margin-left: 5px;
      font-size: 12px;
    }
  }
}
/* ... */

